--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "airbnb",
+  "node": true,
+  "parser": "babel-eslint",
   "rules": {
-    "new-cap": "off"
+    "new-cap": "off",
+    "no-use-before-define": ["error", { "functions": false }],
+    "prefer-rest-params": "off"
   }
 }
