--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.17.2",
+    "bookshelf": "0.10.3",
+    "bookshelf-uuid": "1.0.0",
     "dotenv": "4.0.0",
-    "express": "4.15.3"
+    "express": "4.15.3",
+    "knex": "0.13.0",
+    "pg": "6.2.4"
   },
   "devDependencies": {
+    "babel-eslint": "7.2.3",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "7.0.0",
     "eslint-plugin-jsx-a11y": "0.6.2",
