--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "bookshelf-uuid": "1.0.0",
     "dotenv": "4.0.0",
     "express": "4.15.3",
+    "express-jwt": "5.3.0",
+    "jsonwebtoken": "7.4.1",
     "knex": "0.13.0",
     "pg": "6.2.4"
   },
