--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,3 @@
 {
-  "extends": "airbnb",
-  "node": true,
-  "parser": "babel-eslint",
-  "rules": {
-    "new-cap": "off",
-    "no-use-before-define": ["error", { "functions": false }],
-    "prefer-rest-params": "off"
-  }
+  "extends": "streetcode"
 }
