--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "pg": "6.2.4"
   },
   "devDependencies": {
-    "babel-eslint": "7.2.3",
     "eslint": "3.19.0",
-    "eslint-config-airbnb": "7.0.0",
-    "eslint-plugin-jsx-a11y": "0.6.2",
-    "eslint-plugin-react": "5.2.2",
+    "eslint-config-streetcode": "git+ssh://git@github.com:ofagbemi/eslint-config-streetcode.git",
     "nodemon": "^1.11.0"
   }
 }
