--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "1.17.2",
     "bookshelf": "0.10.3",
     "bookshelf-uuid": "1.0.0",
+    "cors": "2.8.3",
     "dotenv": "4.0.0",
     "express": "4.15.3",
     "express-jwt": "5.3.0",
