--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-jwt": "5.3.0",
     "jsonwebtoken": "7.4.1",
     "knex": "0.13.0",
-    "pg": "6.2.4"
+    "pg": "6.2.4",
+    "ramda": "0.24.1"
   },
   "devDependencies": {
     "eslint": "3.19.0",
